# ctrl-alt-defeat

./: .env  .gitignore  bun.lockb  package-lock.json  package.json  playwright.config.ts
.devcontainer/: devcontainer.json
agents/: journey.txt  output.md  plan  plan.md  run.md
apk/: JonathonAi.chatmode.md
cowork/: AI-Testing-AI-for-Defence.pptx  AI-for-Defence-Recommendations.pptx
docs/: windows-arm64.md
graph/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/: .gitignore  GRAPH_REPORT.md  README.md  cost.json  graph.html  graph.json  manifest.json
information/: 970_9.md  JSP936_Part1.md  cap722a_edition_2.md  cap722b-fifthedition.md  fly2000seriesprint_2026_03_31.md
openperformance/: alan-availability.json  cerf-findings.json  cerf-teststrategy.json  iverson-findings.json  iverson-monitoring.json  noyce-budgets.json  noyce-findings.json  openperformance-report.md  (+1 more)
service/: .gitignore  app.py  devui.py  pyproject.toml
service/agents/: __init__.py  _llm.py  artefact_detector.py  baseline_configurator.py  binder.py  decision_drafter.py  gap_analyser.py  ingest.py  operation_classifier.py  regulatory_mapper.py  sora_evaluator.py
service/knowledge/: dtfea_rubric.yaml  req_catalogue.json
service/knowledge/clause_library/: README.md
service/tests/: conftest.py  test_binder_invariant.py  test_keystone_adversarials.py  test_twin_sample.py
service/tools/: __init__.py  clause_search.py  dtfea_pillars.py  keystones.py  req_checks.py  sora_calculator.py
service/workflow/: __init__.py  applicant_graph.py  schemas.py
(+665 files in other folders)
